fix gap between sidebar buttons on small screen

--- a/frontend/src/styles/components/_groupBar.css
+++ b/frontend/src/styles/components/_groupBar.css
@@ -69,6 +69,8 @@
   width: 150px;
   height: 40px;
   background-color: white;
+  margin: 10px;
+
 }
 
 .fa-sign-out-alt {
@@ -90,12 +92,15 @@
   width: 150px;
   height: 40px;
   background-color: #006aa8;
+  margin: 10px;
 }
 
 .sidebar-button {
-  margin-bottom: 20px;
-  display: flex;
+  margin: 0 auto;
+  padding: 5px;
+  /* display: flex;
   justify-content: space-between;
+  margin-bottom: 10px; */
 }
 
 .sidebarButtonBottom,
@@ -196,33 +201,36 @@
     display: none;
   }
 
-.sidebarButtonTop {
-  margin: 0 auto;
-  display: flex;
-  width: 120px;
-  border: 1px solid #006aa8;
-  color: #006aa8;
-  padding: 10px;
-  border-radius: 20px;
-  font-weight: 500;
-  width: 200px;
-  height: 40px;
-  background-color: white;
-}
-.sidebarButtonBottom {
-  margin: 30px auto;
-  display: flex;
-  width: 120px;
-  border: 1px solid #006aa8;
-  color: white;
-  padding: 10px;
-  border-radius: 20px;
-  font-weight: 500;
-  width: 200px;
-  height: 40px;
-  background-color: #006aa8;
-}
-.sidebarButtonTop a, .sidebarButtonBottom a{
-  margin: 0 auto;
-}
+  .sidebarButtonTop {
+    margin: 0 auto;
+    display: flex;
+    width: 120px;
+    border: 1px solid #006aa8;
+    color: #006aa8;
+    padding: 10px;
+    border-radius: 20px;
+    font-weight: 500;
+    width: 200px;
+    height: 40px;
+    background-color: white;
+  }
+
+  .sidebarButtonBottom {
+    margin: 30px auto;
+    display: flex;
+    width: 120px;
+    border: 1px solid #006aa8;
+    color: white;
+    padding: 10px;
+    border-radius: 20px;
+    font-weight: 500;
+    width: 200px;
+    height: 40px;
+    background-color: #006aa8;
+  }
+
+  .sidebarButtonTop a,
+  .sidebarButtonBottom a {
+    margin: 0 auto;
+  }
 }
